--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   barcode_scan: any
   uni_links: ^0.4.0
   shared_preferences: ^0.5.8
+  logger: 0.9.2
 
 dev_dependencies:
   flutter_test:
