--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,11 @@ dependencies:
   english_words: ^3.1.5
   percent_indicator: ^2.1.5
   barcode_scan: any
-  uni_links: ^0.4.0
   shared_preferences: ^0.5.8
   logger: 0.9.2
+  uuid: 2.2.0
+  provider: 4.3.2
+  pigeon: 0.1.4
 
 dev_dependencies:
   flutter_test:
