--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ dependencies:
   logger: 0.9.2
   uuid: 2.2.0
   provider: 4.3.2
-  pigeon: 0.1.4
   otp: 2.2.1
+  firebase_ml_vision: any
+  flutter_camera_ml_vision: any
+  # qr_mobile_vision: any
   flutter_localizations:
     sdk: flutter
 
