--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  english_words: ^3.1.5
   percent_indicator: ^2.1.5
   shared_preferences: ^0.5.8
   logger: 0.9.2
@@ -33,7 +32,11 @@ dependencies:
   otp: 2.2.1
   firebase_ml_vision: any
   flutter_camera_ml_vision: any
-  # qr_mobile_vision: any
+  firebase_core: any
+  firebase_auth: any
+  google_sign_in: any
+  mutex: any
+
   flutter_localizations:
     sdk: flutter
 
